# opengl

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zq/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  facetrack.cpp  facetrack.h  native-lib.cpp
app/src/main/java/com/zq/opengl/: AudioRecord.kt  Frame.kt  MainActivity.kt
app/src/main/java/com/zq/opengl/face/: Face.java  FaceTracker.java
app/src/main/java/com/zq/opengl/opengl/filter/: AbstractFilter.java  AbstractFilter.kt  AbstractFrameFilter.java  AbstractFrameFilter.kt  BigEyeFilter.java  CameraFilter.java  CameraFilter.kt  FilterChain.java  FilterContext.java  RecordFilter.java  RecordFilter.kt  ScreenFilter.java  ScreenFilter.kt  StickFilter.java
app/src/main/java/com/zq/opengl/opengl/record/: AudioCapture.java  BaseVideoEncoder.java  EGLEnv.java  PutPcmThread.java  Speed.kt  VideoEncodeRecode.java
app/src/main/java/com/zq/opengl/opengl/utils/: CameraHelper.kt  ImageUtils.java  OpenGLUtils.java  OpenGLUtils.kt
app/src/main/java/com/zq/opengl/opengl/widget/: CameraRender.java  CameraRender.kt  CameraView.kt  RecordButton.java
app/src/main/java/com/zq/opengl/seeta/: FaceDetector2.java  FaceRecognizer2.java  PointDetector2.java  SeetaImageData.java  SeetaPointF.java  SeetaRect.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: camera_frag.frag
app/src/test/java/com/zq/opengl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
